--- a/app.json
+++ b/app.json
@@ -2,6 +2,9 @@
   "expo": {
     "name": "cofrinho",
     "slug": "cofrinho",
+    "extra": {
+      "apiUrl": "http://localhost:3000"
+    },
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
