--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "lottie-react-native": "7.2.2",
     "lucide-react-native": "^0.511.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -47,6 +48,7 @@
     "react-native-gesture-handler": "~2.24.0",
     "react-native-mask-text": "^0.14.2",
     "react-native-paper": "^5.14.5",
+    "react-native-qrcode-scanner": "^1.5.5",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.1",
     "react-native-screens": "~4.10.0",
@@ -54,7 +56,7 @@
     "react-native-webview": "13.13.5",
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.32",
-    "lottie-react-native": "7.2.2"
+    "expo-camera": "~16.1.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
